--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h3 class="newsletter-title">Subscribe Newsletter.</h3>
 
             <p class="newsletter-desc">
-              Subscribe the <b>Anon</b> to get latest products and discount update.
+              Subscribe the <b>NexMarket</b> to get latest products and discount update.
             </p>
 
           </div>
@@ -189,7 +189,7 @@
       <div class="container">
 
         <a href="#" class="header-logo">
-          <img src="./assets/images/logo/logo.svg" alt="Anon's logo" width="160" height="36">
+          <img src="./assets/images/logo/logo.svg" alt="NexMarket's logo" width="160" height="36">
         </a>
 
         <div class="header-search-container">
@@ -3566,7 +3566,7 @@
         <img src="./assets/images/payment.png" alt="payment method" class="payment-img">
 
         <p class="copyright">
-          Copyright &copy; <a href="#">Anon</a> all rights reserved.
+          Copyright &copy; <a href="#">NexMarket</a> all rights reserved.
         </p>
 
       </div>
